# docs/swagger.yaml
@@ -112,6 +112,15 @@ definitions:
     - description
     - url
     type: object
+  github_com_huypham67_bookmark-service_internal_dto_bookmark.UpdateBookmarkRequest:
+    properties:
+      description:
+        maxLength: 500
+        minLength: 2
+        type: string
+      url:
+        type: string
+    type: object
   github_com_huypham67_bookmark-service_internal_dto_health.HealthCheckResponse:
     properties:
       instance_id:
@@ -290,6 +299,51 @@ paths:
       security:
       - Bearer: []
       summary: Create Bookmark
+      tags:
+      - bookmarks
+  /v1/bookmarks/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update an existing bookmark (description and/or URL)
+      parameters:
+      - description: Bookmark ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Updated bookmark data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_huypham67_bookmark-service_internal_dto_bookmark.UpdateBookmarkRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Bookmark updated successfully
+          schema:
+            $ref: '#/definitions/gin.H'
+        "400":
+          description: Invalid request body
+          schema:
+            $ref: '#/definitions/gin.H'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/gin.H'
+        "404":
+          description: Bookmark not found
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
+      summary: Update Bookmark
       tags:
       - bookmarks
   /v1/links/redirect/{code}:
