# internal/dto/bookmark/request.go
@@ -5,6 +5,11 @@ type CreateBookmarkRequest struct {
 	URL         string `json:"url" binding:"required,url"`
 }
 
+type UpdateBookmarkRequest struct {
+	Description *string `json:"description" binding:"omitempty,min=2,max=500"`
+	URL         *string `json:"url" binding:"omitempty,url"`
+}
+
 type ListBookmarksRequest struct {
 	Page  int64  `form:"page" binding:"omitempty,min=1"`
 	Limit int64  `form:"limit" binding:"omitempty,min=1,max=100"`
